--- a/templates/home.html
+++ b/templates/home.html
@@ -7,14 +7,14 @@
 
     <div class="d-flex justify-content-center mt-5">
       <div class="mx-4">
-        <a href="/learn" class="btn btn-light border p-5 d-block">
+        <a href="{{ url_for('learn') }}" class="btn btn-light border p-5 d-block">
           <strong>START</strong>
         </a>
         <p class="mt-2">Learn the traits of a good watermelon!</p>
       </div>
 
       <div class="mx-4">
-        <a href="/challenge" class="btn btn-light border p-5 d-block">
+        <a href="{{ url_for('challenge', scenario=1) }}" class="btn btn-light border p-5 d-block">
           <strong>CHALLENGE</strong>
         </a>
         <p class="mt-2">Test your knowledge with our shopping simulation!</p>
