--- a/templates/learn.html
+++ b/templates/learn.html
@@ -30,6 +30,6 @@
       </div>
     </div>
 
-    <a href="/challenge" class="btn btn-outline-secondary mt-4">Confident? Skip ahead to the challenge!</a>
+    <a href="{{ url_for('challenge', scenario=1) }}" class="btn btn-outline-secondary mt-4">Confident? Skip ahead to the challenge!</a>
   </div>
 {% endblock %}
