--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -7,7 +7,7 @@
     <!-- Challenge Section -->
     <div class="challenge-container">
       <div class="challenge-header">
-        <h2>Scenario {{ scenario }}: {{ scenarios[scenario-1].title }}</h2>
+        <h2>Scenario {{ scenario }}</h2>
         <div class="subtitle">{{ scenarios[scenario-1].subtitle }}</div>
       </div>
 
