--- a/static/main.css
+++ b/static/main.css
@@ -29,6 +29,13 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font-family: sans-serif; background-color: #f0f0f0; }
 
+.trait-img {
+  transition: opacity 0.2s ease;
+}
+.trait-img:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
 /* challenge layout */
 .challenge {
   text-align: center;
