Implemented home page design

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,18 +13,27 @@
     
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+
     <title>The Watermelon Sage</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container d-flex justify-content-between">
-        <span class="navbar-brand mb-0 h1">The Watermelon Sage</span>
-        <div>
-          <a class="nav-link d-inline" href="/">Home</a>
-          <a class="nav-link d-inline" href="/learn">Learn</a>
-          <a class="nav-link d-inline" href="{{ url_for('challenge', scenario=1) }}">Challenge</a>
+    <nav class="navbar navbar-expand-lg custom-navbar">
+        <div class="container d-flex justify-content-between align-items-center">
+          <div class="d-flex align-items-center">
+            <img
+              src="{{ url_for('static', filename='images/logo.png') }}"
+              class="nav-logo"
+            >
+          </div>
+      
+          <div>
+            <a class="nav-link d-inline mx-3" href="/">Home</a>
+            <a class="nav-link d-inline mx-3" href="/learn">Learn</a>
+            <a class="nav-link d-inline"    href="{{ url_for('challenge', scenario=1) }}">Challenge</a>
+          </div>
         </div>
-      </div>
     </nav>
 
     <div class="container mt-5">
