--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,14 @@
 
 {% block content %}
   <div class="text-center">
-    <h2 class="font-weight-bold">Welcome!</h2>
-    <p class="mt-3">Ready to learn how to snag the best watermelon at the store?</p>
+    <h2 class="home-welcome">Welcome!</h2>
+    <p class="home-subtitle">Ready to learn how to snag the best watermelon at the store?</p>
 
-    <div class="d-flex justify-content-center mt-5">
-      <div class="mx-4">
-        <a href="{{ url_for('learn') }}" class="btn btn-light border p-5 d-block">
-          <strong>START</strong>
-        </a>
-        <p class="mt-2">Learn the traits of a good watermelon!</p>
-      </div>
+    <div class="mt-5">
+      <a href="{{ url_for('learn') }}" class="home-start-btn">
+        START
+      </a>
+      <p class="home-start-subtitle">Learn the traits of a good watermelon!</p>
     </div>
   </div>
 {% endblock %}
