--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <a href="{{ url_for('learn') }}" class="btn btn-outline-dark">
+    <a href="{{ url_for('learn') }}" class="btn btn-outline-secondary mt-4">
       Got it!
     </a>
 
