--- a/templates/learn.html
+++ b/templates/learn.html
@@ -39,7 +39,7 @@
 
     <a href="{{ url_for('challenge', scenario=1) }}"
        class="btn btn-outline-secondary mt-4">
-      Confident? Skip ahead to the challenge!
+      Confident? Start the challenge!
     </a>
   </div>
 {% endblock %}
