--- a/templates/learn.html
+++ b/templates/learn.html
@@ -2,8 +2,8 @@
 
 {% block content %}
   <div class="text-center">
-    <h2 class="font-weight-bold mb-3">LEARN YOUR WATERMELONS</h2>
-    <p class="mb-4">
+    <h2 class="learn-title">LEARN YOUR WATERMELONS</h2>
+    <p class="learn-subtitle">
       To pick out the best watermelon, you’ll need to look at the following traits:
     </p>
     <div class="row justify-content-center mb-3">
