--- a/templates/learn.html
+++ b/templates/learn.html
@@ -38,7 +38,7 @@
     </div>
 
     {% if visited_lessons|length == lessons|length %}
-      <a href="{{ url_for('challenge', scenario=1) }}"
+      <a href="{{ url_for('retry') }}"
          class="lesson-btn">
         Confident? Start the challenge!
       </a>
