--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
           <div>
             <a class="nav-link d-inline mx-3" href="/">Home</a>
             <a class="nav-link d-inline mx-3" href="/learn">Learn</a>
-            <a class="nav-link d-inline"    href="{{ url_for('challenge', scenario=1) }}">Challenge</a>
+            <a class="nav-link d-inline"    href="{{ url_for('retry') }}">Challenge</a>
           </div>
         </div>
     </nav>
