--- a/static/main.css
+++ b/static/main.css
@@ -166,7 +166,8 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
 
 .lesson-btn:hover {
     transform: scale(1.05);
-    color: #2e9228;
+    color: #599f34;
+    background: linear-gradient(#b3e35b, #d0f98f);
     box-shadow: 0 0 15px rgba(56, 142, 60, 0.6);
 }
 
@@ -193,7 +194,7 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
 .challenge-btn:hover {
   transform: scale(1.05);
   color: #599f34;
-  background: linear-gradient(#cbf778, #deffa2);
+  background: linear-gradient(#b3e35b, #d0f98f);
   box-shadow: 0 0 15px rgba(56, 142, 60, 0.6);
 }
 
@@ -303,9 +304,10 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
     display: inline-block;
 }
 
-.controls button:hover {
+.controls-btn:hover {
     transform: scale(1.05);
-    color: #2e9228;
+    color: #599f34;
+    background: linear-gradient(#b3e35b, #d0f98f);
     box-shadow: 0 0 15px rgba(56, 142, 60, 0.6);
 }
 
