--- a/static/main.css
+++ b/static/main.css
@@ -31,7 +31,7 @@
     font-family: 'Titan One', cursive;
     font-size: 3rem;
     font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
 }
   
 .home-subtitle {
@@ -39,6 +39,9 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.75rem;
     margin-bottom: 2rem;
+    margin: auto;
+    max-width: 520px;
+    line-height: 35px;
 }
   
 .home-start-btn {
@@ -104,6 +107,18 @@
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font-family: sans-serif; background-color: #f0f0f0; }
+
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.9;
+}
+
 
 .learn-title {
     color: #2e9228;
@@ -391,7 +406,7 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
 .results-title {
   font-family: 'Titan One', cursive;
   font-size: 3rem;
-  color: #558b2f;
+  color: #2e9228;
   margin-bottom: 20px;
 }
 .results-subtitle {
@@ -414,19 +429,23 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
 
 /* color coding */
 .score-box.high {
-  background: #d0f8ce;
-  border-color: #4caf50;
-  color: #2e7d32;
+  background: linear-gradient(#95cd25, #caec86);
+  border-color: #2e9228;
+  color: #2e9228;
 }
 .score-box.mid {
   background: #fff9c4;
-  border-color: #fdd835;
-  color: #f57f17;
+  background: linear-gradient(#fbb565, #fff6a2);
+  border-color: #ffe570;
+  outline: solid 8px #77bc1e;
+  color: #f39600;
 }
 .score-box.low {
   background: #ffcdd2;
-  border-color: #e53935;
-  color: #b71c1c;
+  background: linear-gradient(#ff7b69, #ffbc82);
+  border-color: #ffebb4;
+  color: #fd4028;
+  outline: solid 8px #2e9228;
 }
 
 /* action buttons */
@@ -441,7 +460,7 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
   font-size: 1.25rem;
   padding: 20px 30px;
   border: 4px solid #4caf50;
-  border-radius: 6px;
+  border-radius: 15px;
   background: #bee86e;
   color: #2e7d32;
   text-decoration: none;
@@ -449,6 +468,8 @@ body { font-family: sans-serif; background-color: #f0f0f0; }
 }
 .results-actions .btn:hover {
   transform: scale(1.05);
+  color: #599f34;
+  background: linear-gradient(#b3e35b, #d0f98f);
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
 }
 
