--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,10 +22,12 @@
     <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container d-flex justify-content-between align-items-center">
           <div class="d-flex align-items-center">
-            <img
+            <a href="/">
+              <img
               src="{{ url_for('static', filename='images/logo.png') }}"
               class="nav-logo"
-            >
+              >
+            </a> 
           </div>
       
           <div>
