fix score issue

--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -46,7 +46,7 @@
               </a>
             {% else %}
               <!-- Last lesson: go to quiz -->
-              <a href="{{ url_for('challenge', scenario=1) }}" class="lesson-btn">
+              <a href="{{ url_for( 'retry' ) }}" class="lesson-btn">
                 Start the Challenge!
               </a>
             {% endif %}
